--- a/front-web/src/Home/styles.css
+++ b/front-web/src/Home/styles.css
@@ -1,6 +1,9 @@
 .home-container {
     padding-top: 100px;
-    height: calc(100vh - 254px);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .home-container h1 {
@@ -34,7 +37,7 @@
     background-color: var(--primary-color);
     border-radius: 10px;
     height: 70px;
-    width: 235px;
+    width: 236px;
     display: inline-block;
     display: flex;
     align-items: center;
@@ -55,10 +58,6 @@
   }
   
   @media only screen and (max-width: 768px) {
-    .home-container {
-      height: auto;
-      margin-bottom: 50px;
-    }
   
     .home-content {
       flex-direction: column-reverse;
@@ -87,10 +86,3 @@
     }
   }
   
-  @media (max-height: 700px) {
-    .home-container {
-      height: auto;
-      margin-bottom: 30px;
-    }
-  }
- 
